Fix: the logo covering the links

--- a/frontend/src/components/Blocks/VimeoBlock/css/vimeoblock.less
+++ b/frontend/src/components/Blocks/VimeoBlock/css/vimeoblock.less
@@ -157,7 +157,8 @@
   .arrow-lists{
     margin-top: 0px !important;
     margin-bottom: 0px !important;
-    padding-left: 24px !important;
+    position: relative;
+    z-index: 2;
   }
 
   a{
